# rayline-macos

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PRIVACY.md  Package.swift  README.md  SECURITY.md  SUPPORT.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_private_report.yml
.github/workflows/: ci.yml  release.yml
App/: AppIcon.icns  AppPaths.swift  ContentFeedback.swift  ContentView.swift  DiagnosticExporter.swift  Info.plist  LanguageManager.swift  LifecycleRecovery.swift  Localization.swift  LogScreen.swift  LoginItemManager.swift  ProfileImportParser.swift  ProfileManager.swift  ProfilesScreen.swift  ProfilesSummary.swift  ProxyParser.swift  RaylineApp.swift  ReconnectPolicy.swift  SettingsScreen.swift  SettingsSummary.swift  SharedViews.swift  SocksProbe.swift  StatusScreen.swift  StatusSummary.swift  SubscriptionManager.swift  SubscriptionRefreshPolicy.swift  TCPProbe.swift  ThemeManager.swift  ToastManager.swift  VPNManager.swift  VeilApp.swift  build.sh
Tests/: AppPathsTests.swift  ContentFeedbackTests.swift  DiagnosticExporterTests.swift  FailoverConfigTests.swift  LifecycleRecoveryTests.swift  LocalizationTests.swift  LoginItemManagerTests.swift  ProfileImportParserTests.swift  ProfileManagerTests.swift  ProfilesSummaryTests.swift  ProxyParserTests.swift  ReconnectPolicyTests.swift  SettingsSummaryTests.swift  SharedCasesTests.swift  SocksProbeTests.swift  StatusSummaryTests.swift  SubscriptionManagerTests.swift  SubscriptionRefreshPolicyTests.swift  TCPProbeTests.swift  ThemeManagerTests.swift  VPNManagerTests.swift  shared_test_cases.json  test_config.cpp  test_proxy_parser.cpp  test_shared_cases.cpp  test_wireguard.cpp
docs/: KNOWN_LIMITATIONS.md  MANUAL_GUI_CHECKLIST.md  PREPROD_RELEASE_CHECKLIST.md  RELEASE_CHECKLIST.md  ROADMAP.md  TROUBLESHOOTING.md
scripts/: privacy_scan.sh  verify_release_artifact.sh
src/: main.cpp  vpn_client.cpp  vpn_client.hpp
src/config/: config.cpp  config.hpp
src/crypto/: blake2s.hpp  chacha20poly1305.hpp  crypto.hpp  curve25519.hpp  mini_json.hpp
src/frontend/: gui_server.cpp  gui_server.hpp  http_server.hpp  main_gui.cpp
src/network/: route_manager.cpp  route_manager.hpp
src/proxy/: proxy_parser.cpp  proxy_parser.hpp
src/tun/: tun_interface.cpp  tun_interface.hpp
src/wireguard/: noise.hpp  wireguard.cpp  wireguard.hpp
